kubeflow-v1.0/ext/istio/oidc-authservice/overlays/agilestacks/istio-gateway.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kubeflow-ingressgateway
  labels:
    app: kubeflow-ingressgateway
    istio: kubeflow-ingressgateway
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
spec:
  type: LoadBalancer
  selector:
    app: kubeflow-ingressgateway
    istio: kubeflow-ingressgateway
  ports:
    - name: http2
      port: 80
      targetPort: 80
    - name: https
      port: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeflow-ingressgateway
  labels:
    app: kubeflow-ingressgateway
    istio: kubeflow-ingressgateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubeflow-ingressgateway
      istio: kubeflow-ingressgateway
  template:
    metadata:
      labels:
        app: kubeflow-ingressgateway
        istio: kubeflow-ingressgateway
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: kubeflow-ingressgateway-service-account
      containers:
        - name: istio-proxy
          image: "gcr.io/istio-release/proxyv2:release-1.3-latest-daily"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
            - containerPort: 443
            - containerPort: 15090
              protocol: TCP
              name: http-envoy-prom
          args:
          - proxy
          - router
          - --domain
          - $(POD_NAMESPACE).svc.cluster.local
          - --log_output_level=default:info
          - --drainDuration
          - '45s' #drainDuration
          - --parentShutdownDuration
          - '1m0s' #parentShutdownDuration
          - --connectTimeout
          - '10s' #connectTimeout
          - --serviceCluster
          - kubeflow-ingressgateway
          - --zipkinAddress
          - zipkin:9411
          - --proxyAdminPort
          - "15000"
          - --statusPort
          - "15020"
          - --controlPlaneAuthPolicy
          - NONE
          - --discoveryAddress
          - istio-pilot:15010
          readinessProbe:
            failureThreshold: 30
            httpGet:
              path: /healthz/ready
              port: 15020
              scheme: HTTP
            initialDelaySeconds: 1
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 10m
            
          volumeMounts:
          - name: istio-certs
            mountPath: /etc/certs
            readOnly: true
      volumes:
      - name: istio-certs
        secret:
          secretName: istio.kubeflow-ingressgateway-service-account
          optional: true
      affinity:      
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - "amd64"
                - "ppc64le"
                - "s390x"
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 2
            preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - "amd64"
          - weight: 2
            preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - "ppc64le"
          - weight: 2
            preference:
              matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                - "s390x"
